# Smart-Esprit

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  fichierglade.glade.bak.bak  first.bak  firstp.bak  fonction neder.c  fonction_neder.h  fonctionoum.c  fonctionrih.c  fonctionrih.h  hossmain.c  main neder.c  main.c  main_neder.c  mainammeen.c  mainilyes.c  mainnader.c  mainr.c  mainri.c  mainrih.c
autom4te.cache/: output.1  requests  traces.0  traces.1
glade/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  glade.glade.bak
glade/autom4te.cache/: output.1  requests  traces.0  traces.1
glade/po/: Makefile  Makefile.in
glade/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dechets.txt  fichier_nader.h  fonction.c  fonction.h  fonction_nader.c  glade  interface.c.bak  interface.h  main.c  n_menu.txt  rech.txt  temp
glade/src/.deps/: callbacks.Po  fonction.Po  interface.Po
neder/: fonction.c  main.c
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  first  fonctionilyes.c  fonctionilyes.h  interface.c  interface.c.bak  interface.h.bak  main.c  produit.txt  utilisateur.txt
src/.deps/: callbacks.Po  fonction.Po  fonctionilyes.Po  main.Po  support.Po
